# pyaptly

./: pyproject.toml
.github/workflows/: deploy.yml
