[project]
name = "pyaptly"
version = "2.0.0"
description = "Aptly mirror/snapshot managment automation.",
readme = "README.rst"
license = {file = "LICENSE"}

authors = [{  name = "Adfinis AG", email = "support@adfinis.com" }]
maintainers = [{  name = "Adfinis AG", email = "support@adfinis.com" }]

keywords = [ "aptly", "mirror", "snapshot", "automation" ]

dependencies = [
    "pyyaml",
    "six"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: "
    "GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
]

[project.optional-dependencies]

tests = [
    "freeze",
]

[project.urls]

homepage = "https://github.com/adfinis/pyaptly"
repository = "https://github.com/adfinis/pyaptly"
changelog = "https://github.com/adfinis/pyaptly/blob/master/CHANGELOG.rst"
 
[project.entry-points.'console_scripts']

pyaptly = "pyaptly:main"
